Swap max-width: 1000% for 100vw; it fixes the same issue (resetting the max-width of the alignwide elements), but in a less-hacky way.

--- a/sass/blocks/_blocks.scss
+++ b/sass/blocks/_blocks.scss
@@ -16,7 +16,7 @@
 	&.alignwide {
 		@include media(tablet) {
 			margin-right: -53%;
-			max-width: 1000%;
+			max-width: 100vw;
 		}
 	}
 
